fixed form not stretching on mobile

--- a/src/styles/blocks/main/contact-us/contact-us.scss
+++ b/src/styles/blocks/main/contact-us/contact-us.scss
@@ -4,6 +4,9 @@
 .contact-us {
   @include column(48px);
 
+  width: 100%;
+  max-width: 1024px;
+
   &__header {
     text-align: center;
   }
